src/objects/IEC_Functionality__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Set / Unset IEC Functionalities</description>
    <fields>
        <fullName>Audience__c</fullName>
        <inlineHelpText>Audience to choose the functionality setting, choose one of:
  userId=&lt;reg expr&gt;
  userName=&lt;reg expr&gt;
  userEmail=&lt;reg expr&gt;
  userType=&lt;reg expr&gt;
  profileId=&lt;reg expr&gt;
  organizationId=&lt;reg expr&gt;
  cookie=&lt;cookie name&gt;
  all=&lt;true | false&gt;</inlineHelpText>
        <label>Audience</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Functionality_Name__c</fullName>
        <label>Functionality Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Functionality_Value__c</fullName>
        <inlineHelpText>Additional setting for the Functionality.</inlineHelpText>
        <label>Functionality Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Set to true to Activate the Functionality.</inlineHelpText>
        <label>Is Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <inlineHelpText>Order of evaluation of the rule assignment.</inlineHelpText>
        <label>Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>IEC Functionality</label>
</CustomObject>